# fairsharer

./: README.md  pyproject.toml
.github/workflows/: ci.yaml
src/: fairsharer.py
tests/: test_fairsharer.py
