[project]
name = "fairsharer"
version = "0.1.0"
description = "Fair sharing simulation in Python for DAISY course assignment"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"

